plugins {
    id 'java'
    id 'application'
}

group 'fr.gplassard'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

apply plugin: 'java'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

application {
    mainClass = 'fr.gplassard.saw.Saw'
}

dependencies {
    implementation 'info.picocli:picocli:4.7.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'software.amazon.awssdk:cloudwatchlogs:2.18.6'
    implementation 'software.amazon.awssdk:sts:2.18.6'
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    implementation 'ch.qos.logback:logback-classic:1.4.4'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
    testImplementation 'org.assertj:assertj-core:3.23.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

test {
    useJUnitPlatform()
}
